======================
 MDAnalysis CHANGELOG
======================

The rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every subversion log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
??/??/11 orbeckst, dcaplan
        * 0.7.2 development
	* NOTE: minimum Python version required is 2.5 (since 0.6.3)
	* installation: removed dependency on Cython; developer should
	  use setup_developer.py instead of setup.py (Issue 66)	  
	* loading from a PDB sets segid to the chain id if it exists
	* PrimitivePDBWriter uses first letter of segid as PDB chain id
	* Fixed a problem with the strict PDBReader: raised exception when the
	  pdb did not contain a segid
        * Support for PDBs with 4 character resnames and segID output when
	  writing (Issue 63) --- makes the (default) PrimitivePDBReader/Writer
	  more suitable for NAMD/CHARMM but breaks strict PDB standard. If
	  you need full PDB reading capabilities, use the strict PDB reader.
	* fixed bug in (experimental) phi and psi selections
	* aliased segment.name to segment.id
	* fixed bugs in reading of unit cells (Issue 60, Issue 61, Issue 34)
	* universe.trajectory.delta returns the full precision dt value
	  (Issue 64)
        * new method AtomGroup.bbox() that returns the orthorhombic bounding box
	* enhancements of the analysis.density module (build density
	  from B-factors) 
	* PQR radius is now an attribute of Atom; AtomGroup.radii() returns the
	  radii as a NumPy array; internally B-factor has also become an
	  attribute of each Atom. 
        * recognise many more OPLS/AA and Amber residue names as "protein"
	* analysis.align: convenience functions rotation_matrix() and alignto()
	* doc improvements 

02/08/11 orbeckst, denniej0, jandom, tyler.je.reddy, Joshua Adelman
        * 0.7.1 release